--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 <script>
     window.fbAsyncInit = function() {
       FB.init({
-        appId      : '{your-app-id}',
+        appId      : '{339257673761590}',
         cookie     : true,
         xfbml      : true,
-        version    : '{api-version}'
+        version    : '{v9.0}'
       });
         
    
